--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,23 +1,358 @@
-- id: doi:10.1371/journal.pcbi.1007128
-  type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2020-12-4
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  buttons:
-    - type: manubot
-      link: https://greenelab.github.io/meta-review/
-    - type: source
-      text: Manuscript Source
-      link: https://github.com/greenelab/meta-review
-    - type: website
-      link: http://manubot.org/
+- id: doi:10.1016/j.immuni.2024.02.020
+  image: images/immunity.svg
   tags:
-    - open science
-    - collaboration
-  repo: greenelab/meta-review
+  preprint: n
+  stage: pd
+  project: hostmicro
+  extra-links:
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
+- id: doi:10.1126/sciadv.adk1887
+  image: images/sciadv.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: collab
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10558122/
+      text: PMC Full Text
+    - type: preprint
+      link: https://www.biorxiv.org/content/10.1101/2023.02.15.528712v1
+      text: Preprint - bioRxiv
+    - type: press
+      link: https://www.nature.com/articles/d41586-023-03105-3
+      text: Nature Research
+    - type: press
+      link: https://newsroom.ucla.edu/releases/mice-need-diverse-gut-microbiome-to-form-healthy-placentas
+      text: UCLA Newsroom
 
-- id: doi:10.7554/eLife.32822
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+- id: doi:10.1084/jem.20221751
+  image: images/jem.png
+  tags:
+  preprint: n
+  stage: pd
+  project: hostmicro
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10236943
+      text: PMC Full Text
+    - type: cme
+      link: https://mskcc.cloud-cme.com/course/courseoverview?P=0&EID=42816
+      text: MSK CME
+    - type: video
+      link: https://www.youtube.com/watch?v=W4zU04S55ps
+      text: Video Abstract
+    - type: press
+      link: https://doi.org/10.1038/s41584-023-01000-9
+      text: Nature Reviews Rheumatology
+    - type: press
+      link: https://doi.org/10.1084/jem.20230783
+      text: JEM Insights
+
+- id: doi:10.1101/2023.02.15.528712
+  image: images/biorxiv.svg
+  tags:
+  preprint: y
+  stage: pd
+  project: collab
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9948959
+      text: PMC Full Text
+
+- id: doi:10.1177/00220345221110768
+  image: images/jdr.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: atlas
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9516614
+      text: PMC Full Text
+
+- id: doi:10.1126/sciimmunol.abp8632
+  image: images/scienceImmunology.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: hostmicro
+  type: perspective
+
+- id: doi:10.1002/jbmr.4614
+  image: images/jbmr.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: inflammation
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9386631/
+      text: PMC Full Text
+
+- id: doi:10.1016/j.bbrc.2022.02.088
+  image: images/bbrc.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: etiology
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9406235/
+      text: PMC Full Text
+
+- id: doi:10.1038/s41368-022-00166-4
+  image: images/ijos.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: inflammation
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8934872/
+      text: PMC Full Text
+
+- id: doi:10.1016/j.xpro.2021.100908
+  image: images/starProtocols.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: atlas
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8551218/
+      text: PMC Full Text
+
+- id: doi:10.1126/science.abi8835
+  image: images/science.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: hostmicro
+
+- id: doi:10.1016/j.cell.2021.05.013
+  image: images/cell.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: atlas
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8359928/
+      text: PMC Full Text
+    - type: preprint
+      link: https://www.biorxiv.org/content/10.1101/2021.04.06.438702v1
+      text: Preprint
+    - type: source
+      link: https://github.com/williamsdrake/oralAtlas
+      text: Code
+    - type: data
+      link: https://oral.cellatlas.io/
+      text: Interactive data viewer
+    - type: video
+      link: https://jrnlclub.org/research-films/oral-mucosa-cell-atlas
+      text: JRNL club
+    - type: opinion
+      link: https://doi.org/10.3410/f.740287213.793587038
+      text: Faculty Opinions (Excellent)
+    - type: press
+      link: https://www.nidcr.nih.gov/news-events/nidcr-news/2021/census-inside-your-mouth
+      text: NIDCR News
+    - type: press
+      link: https://www.nature.com/articles/s41577-021-00582-3
+      text: Nature Reviews Immunology
+    - type: press
+      link: https://doi.org/10.1111/all.15219
+      text: Allergy (News and Views)
+    - type: press
+      link: https://www.dentistrytoday.com/oral-cell-census-reveals-insight-into-periodontal-disease/
+      text: Dentistry Today
+
+- id: doi:10.1101/2021.04.06.438702
+  image: images/biorxiv.svg
+  tags:
+  preprint: y
+  stage: pd
+  project: atlas
+
+- id: doi:10.1126/science.aay5731
+  image: images/science.svg
+  tags:
+  preprint: n
+  stage: pd
+  project: hostmicro
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8326743/
+      text: PMC Full Text
+    - type: opinion
+      link: https://doi.org/10.3410/f.739361046.793582190
+      text: Faculty Opinions (Excellent)
+    - type: opinion
+      link: https://doi.org/10.3410/f.739361046.793582293
+      text: Faculty Opinions (Excellent)
+    - type: opinion
+      link: https://doi.org/10.3410/f.739361046.793582683
+      text: Faculty Opinions (Excellent)
+    - type: press
+      link: https://www.niaid.nih.gov/news-events/how-do-fungal-infections-take-hold-rare-disease-offers-new-insights
+      text: NIAID Now
+    - type: press
+      link: https://www.nidcr.nih.gov/news-events/nidcr-news/2021/how-fungus-finds-foothold-mouth
+      text: NIDCR News
+    - type: press
+      link: https://www.dentistrytoday.com/news/industrynews/item/7931-researchers-uncover-how-fungus-takes-hold-in-the-oral-cavity
+      text: Dentistry Today
+
+- id: doi:10.1038/s41586-020-2745-3
+  image: images/nature.svg
+  date: 2020-9-23
+  tags:
+  preprint: n
+  stage: pd
+  project: collab
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7554197/
+      text: PMC Full Text
+    - type: podcast
+      link: https://www.microbe.tv/twin/twin-15/
+      text: This Week in Neuroscience, Episode 15
+    - type: video
+      link: https://www.youtube.com/watch?v=cqfVBVkOS1U
+      text: The Sheekey Science Show
+    - type: press
+      link: https://www.nature.com/articles/d41586-020-02657-y
+      text: Nature News and Views
+    - type: press
+      link: https://newsroom.ucla.edu/releases/maternal-microbiota-and-the-fetal-brain
+      text: UCLA Newsroom
+    - type: press
+      link: https://www.eurekalert.org/pub_releases/2020-09/uoc--hmi092320.php
+      text: EurekaAlert!
+    - type: press
+      link: https://www.sciencedaily.com/releases/2020/09/200923164601.htm
+      text: Science Daily
+    - type: press
+      link: https://www.sciencenews.org/article/mother-mouse-gut-microbes-microbiome-pup-brain
+      text: Science News
+    - type: press
+      link: https://bioengineer.org/how-microbes-in-a-mothers-intestines-affect-fetal-neurodevelopment/
+      text: Bioengineer.org
+    - type: press
+      link: https://theconversation.com/how-a-pregnant-mouses-microbes-influence-offsprings-brain-development-new-study-offers-clues-146521
+      text: The Conversation
+    - type: press
+      link: https://medium.com/predict/mothers-microbes-shape-the-brain-of-their-unborn-children-7872370aeda9
+      text: Medium
+
+- id: doi:10.1177/0022034520908594
+  image: images/jdr.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: inflammation
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7243424/
+      text: PMC Full Text
+    - type: press
+      link: https://doi.org/10.1177/0022034520918536
+      text: Special Edition on Oral Microbiome
+
+- id: doi:10.1128/MRA.01481-18
+  image: images/mra.svg
+  tags:
+  preprint: n
+  stage: other
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6328665/
+      text: PMC Full Text
+
+- id: doi:10.1016/j.ajpath.2018.06.019
+  image: images/ajp.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: inflammation
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6169128/
+      text: PMC Full Text
+    - type: press
+      link: https://doi.org/10.1016/j.ajpath.2018.08.001
+      text: This Month in AJP
+
+- id: doi:10.1002/jbmr.2985
+  image: images/jbmr.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: etiology
+  extra-links:  
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5642919/
+      text: PMC Full Text
+
+- id: doi:10.1111/acel.12364
+  image: images/agingCell.svg
+  tags:
+  preprint: n
+  stage: other
+  project:
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4568971/
+      text: PMC Full Text
+
+- id: doi:10.1016/j.ajpath.2014.07.010
+  image: images/ajp.svg
+  tags:
+  preprint: n
+  stage: phd
+  project: etiology
+  extra-links:
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215026/
+      text: PMC Full Text
+    - type: press
+      link: https://newsroom.ucla.edu/releases/study-by-ucla-scientists-reveals-new-findings-about-cause-of-lesions-around-jaw-bone
+      text: UCLA Newsroom
+    - type: press
+      link: https://dentistry.ucla.edu/newsletter/15/01/research-news
+      text: UCLA School of Dentistry
+    - type: press
+      link: https://doi.org/10.1016/j.ajpath.2014.08.016
+      text: This Month in AJP
+    - type: cme
+      link: 
+      text: ASIP CME Manuscript
+
+- id: doi:10.1016/j.joen.2013.06.004
+  image: images/joe.svg
+  tags:
+  preprint: n
+  stage: other
+  extra-links:  
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3771400/
+      text: PMC Full Text
+- id: doi:10.1016/j.joen.2012.09.006
+  image: images/joe.svg
+  tags:
+  preprint: n
+  stage: other
+  extra-links:  
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3770841/
+      text: PMC Full Text
+- id: doi:10.1177/0022034511402995
+  image: images/jdr.svg
+  tags:
+  preprint: n
+  stage: other
+  extra-links:  
+    - type: preprint
+      link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3144120/
+      text: PMC Full Text
