update buttons and publications

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -4,7 +4,7 @@
   preprint: n
   stage: pd
   project: hostmicro
-  extra-links:
+  buttons:
 
 - id: doi:10.1126/sciadv.adk1887
   image: images/sciadv.svg
@@ -12,7 +12,7 @@
   preprint: n
   stage: pd
   project: collab
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10558122/
       text: PMC Full Text
@@ -32,7 +32,7 @@
   preprint: n
   stage: pd
   project: hostmicro
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10236943
       text: PMC Full Text
@@ -55,7 +55,7 @@
   preprint: y
   stage: pd
   project: collab
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9948959
       text: PMC Full Text
@@ -66,7 +66,7 @@
   preprint: n
   stage: pd
   project: atlas
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9516614
       text: PMC Full Text
@@ -85,7 +85,7 @@
   preprint: n
   stage: phd
   project: inflammation
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9386631/
       text: PMC Full Text
@@ -96,7 +96,7 @@
   preprint: n
   stage: phd
   project: etiology
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9406235/
       text: PMC Full Text
@@ -107,7 +107,7 @@
   preprint: n
   stage: phd
   project: inflammation
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8934872/
       text: PMC Full Text
@@ -118,7 +118,7 @@
   preprint: n
   stage: pd
   project: atlas
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8551218/
       text: PMC Full Text
@@ -136,7 +136,7 @@
   preprint: n
   stage: pd
   project: atlas
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8359928/
       text: PMC Full Text
@@ -181,7 +181,7 @@
   preprint: n
   stage: pd
   project: hostmicro
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8326743/
       text: PMC Full Text
@@ -211,7 +211,7 @@
   preprint: n
   stage: pd
   project: collab
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7554197/
       text: PMC Full Text
@@ -252,7 +252,7 @@
   preprint: n
   stage: phd
   project: inflammation
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7243424/
       text: PMC Full Text
@@ -265,7 +265,7 @@
   tags:
   preprint: n
   stage: other
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6328665/
       text: PMC Full Text
@@ -276,7 +276,7 @@
   preprint: n
   stage: phd
   project: inflammation
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6169128/
       text: PMC Full Text
@@ -290,7 +290,7 @@
   preprint: n
   stage: phd
   project: etiology
-  extra-links:  
+  buttons:  
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5642919/
       text: PMC Full Text
@@ -301,7 +301,7 @@
   preprint: n
   stage: other
   project:
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4568971/
       text: PMC Full Text
@@ -312,7 +312,7 @@
   preprint: n
   stage: phd
   project: etiology
-  extra-links:
+  buttons:
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215026/
       text: PMC Full Text
@@ -334,7 +334,7 @@
   tags:
   preprint: n
   stage: other
-  extra-links:  
+  buttons:  
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3771400/
       text: PMC Full Text
@@ -343,7 +343,7 @@
   tags:
   preprint: n
   stage: other
-  extra-links:  
+  buttons:  
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3770841/
       text: PMC Full Text
@@ -352,7 +352,7 @@
   tags:
   preprint: n
   stage: other
-  extra-links:  
+  buttons:  
     - type: preprint
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3144120/
       text: PMC Full Text
