update pmc, citation overflow

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -13,7 +13,7 @@
   stage: pd
   project: collab
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10558122/
       text: PMC Full Text
     - type: preprint
@@ -33,7 +33,7 @@
   stage: pd
   project: hostmicro
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10236943
       text: PMC Full Text
     - type: cme
@@ -56,7 +56,7 @@
   stage: pd
   project: collab
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9948959
       text: PMC Full Text
 
@@ -67,7 +67,7 @@
   stage: pd
   project: atlas
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9516614
       text: PMC Full Text
 
@@ -86,7 +86,7 @@
   stage: phd
   project: inflammation
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9386631/
       text: PMC Full Text
 
@@ -97,7 +97,7 @@
   stage: phd
   project: etiology
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9406235/
       text: PMC Full Text
 
@@ -108,7 +108,7 @@
   stage: phd
   project: inflammation
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8934872/
       text: PMC Full Text
 
@@ -119,7 +119,7 @@
   stage: pd
   project: atlas
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8551218/
       text: PMC Full Text
 
@@ -137,7 +137,7 @@
   stage: pd
   project: atlas
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8359928/
       text: PMC Full Text
     - type: preprint
@@ -182,7 +182,7 @@
   stage: pd
   project: hostmicro
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8326743/
       text: PMC Full Text
     - type: opinion
@@ -212,7 +212,7 @@
   stage: pd
   project: collab
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7554197/
       text: PMC Full Text
     - type: podcast
@@ -253,7 +253,7 @@
   stage: phd
   project: inflammation
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7243424/
       text: PMC Full Text
     - type: press
@@ -266,7 +266,7 @@
   preprint: n
   stage: other
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6328665/
       text: PMC Full Text
 
@@ -277,7 +277,7 @@
   stage: phd
   project: inflammation
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6169128/
       text: PMC Full Text
     - type: press
@@ -291,7 +291,7 @@
   stage: phd
   project: etiology
   buttons:  
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5642919/
       text: PMC Full Text
 
@@ -302,7 +302,7 @@
   stage: other
   project:
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4568971/
       text: PMC Full Text
 
@@ -313,7 +313,7 @@
   stage: phd
   project: etiology
   buttons:
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4215026/
       text: PMC Full Text
     - type: press
@@ -335,7 +335,7 @@
   preprint: n
   stage: other
   buttons:  
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3771400/
       text: PMC Full Text
 - id: doi:10.1016/j.joen.2012.09.006
@@ -344,7 +344,7 @@
   preprint: n
   stage: other
   buttons:  
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3770841/
       text: PMC Full Text
 - id: doi:10.1177/0022034511402995
@@ -353,6 +353,6 @@
   preprint: n
   stage: other
   buttons:  
-    - type: preprint
+    - type: pmc
       link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3144120/
       text: PMC Full Text
