--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # site properties and page defaults
-title: Drake Williams DDS, PhD
-description: A dentist scientist studying oral barrier immunity
+title: Laboratory of Oral Mucosal Immunity @ U of MN
+description: Laboratory of Oral Mucosal Immunity @ U of MN
 logo: images/logo.png
 header: 
 footer: 
