--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,7 @@
 # site properties and page defaults
-title: Laboratory of Oral Mucosal Immunity @ U of MN
-description: Laboratory of Oral Mucosal Immunity @ U of MN
+title: Laboratory of Oral Mucosal Immunity 
+subtitle: @ U of MN
+description: Website for the Laboratory of Oral Mucosal Immunity @ U of MN
 logo: images/logo.png
 header: 
 footer: 
