--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # site properties and page defaults
 title: Laboratory of Oral Mucosal Immunity 
-subtitle: @ U of MN
+subtitle: at U of MN
 description: Website for the Laboratory of Oral Mucosal Immunity @ U of MN
 logo: images/logo.png
 header: 
