--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -5,7 +5,9 @@
   stage: pd
   project: hostmicro
   buttons:
-
+    - type: press
+      link: https://www.nidcr.nih.gov/news-events/nidcr-news/2024/gum-cells-detect-shift-mouth-microbes-may-trigger-inflammation-gum-disease
+      text: NIDCR News
 - id: doi:10.1126/sciadv.adk1887
   image: images/sciadv.svg
   tags:
