--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 title: Laboratory of Oral Mucosal Immunity 
 subtitle: at U of MN
 description: Website for the Laboratory of Oral Mucosal Immunity @ U of MN
-logo: images/logo.svg
+logo: images/logo.png
 header: 
 footer: 
 baseurl: ""
