--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,6 +1,7 @@
 - id: doi:10.1016/j.immuni.2024.02.020
   image: images/immunity.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: hostmicro
@@ -18,6 +19,7 @@
 - id: doi:10.1126/sciadv.adk1887
   image: images/sciadv.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: collab
@@ -38,6 +40,7 @@
 - id: doi:10.1084/jem.20221751
   image: images/jem.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: hostmicro
@@ -61,6 +64,7 @@
 - id: doi:10.1177/00220345221110768
   image: images/jdr.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: atlas
@@ -80,6 +84,7 @@
 - id: doi:10.1002/jbmr.4614
   image: images/jbmr.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: inflammation
@@ -91,6 +96,7 @@
 - id: doi:10.1016/j.bbrc.2022.02.088
   image: images/bbrc.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: etiology
@@ -102,6 +108,7 @@
 - id: doi:10.1038/s41368-022-00166-4
   image: images/ijos.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: inflammation
@@ -113,6 +120,7 @@
 - id: doi:10.1016/j.xpro.2021.100908
   image: images/starProtocols.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: atlas
@@ -124,6 +132,7 @@
 - id: doi:10.1126/science.abi8835
   image: images/science.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: hostmicro
@@ -131,6 +140,7 @@
 - id: doi:10.1016/j.cell.2021.05.013
   image: images/cell.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: atlas
@@ -169,6 +179,7 @@
 - id: doi:10.1126/science.aay5731
   image: images/science.svg
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: hostmicro
@@ -199,6 +210,7 @@
   image: images/nature.svg
   date: 2020-9-23
   tags:
+  preumn: y
   preprint: n
   stage: pd
   project: collab
@@ -240,6 +252,7 @@
 - id: doi:10.1177/0022034520908594
   image: images/jdr.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: inflammation
@@ -254,6 +267,7 @@
 - id: doi:10.1128/MRA.01481-18
   image: images/mra.svg
   tags:
+  preumn: y
   preprint: n
   stage: other
   buttons:
@@ -264,6 +278,7 @@
 - id: doi:10.1016/j.ajpath.2018.06.019
   image: images/ajp.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: inflammation
@@ -278,6 +293,7 @@
 - id: doi:10.1002/jbmr.2985
   image: images/jbmr.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: etiology
@@ -289,6 +305,7 @@
 - id: doi:10.1111/acel.12364
   image: images/agingCell.svg
   tags:
+  preumn: y
   preprint: n
   stage: other
   project:
@@ -300,6 +317,7 @@
 - id: doi:10.1016/j.ajpath.2014.07.010
   image: images/ajp.svg
   tags:
+  preumn: y
   preprint: n
   stage: phd
   project: etiology
@@ -323,6 +341,7 @@
 - id: doi:10.1016/j.joen.2013.06.004
   image: images/joe.svg
   tags:
+  preumn: y
   preprint: n
   stage: other
   buttons:  
@@ -332,6 +351,7 @@
 - id: doi:10.1016/j.joen.2012.09.006
   image: images/joe.svg
   tags:
+  preumn: y
   preprint: n
   stage: other
   buttons:  
@@ -341,6 +361,7 @@
 - id: doi:10.1177/0022034511402995
   image: images/jdr.svg
   tags:
+  preumn: y
   preprint: n
   stage: other
   buttons:  
