--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -63,5 +63,5 @@
   group: more
   image: images/website.jpg
   link: https://github.com/greenelab/lab-website-template
-  description: An incredible template from Greene Lab used to make this website. Fork on github (williamsdrake/ williamsdrake.github.io)!
+  description: An incredible template from Greene Lab used to make this website. Fork it on github for your own use!
   repo: 
