--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -7,14 +7,14 @@
 
 - name: Oral Atlas (2021) - Code
   group: dataset
-  image: images/resource/oralAtlas.svg
+  image: https://githubcard.com/williamsdrake/oralAtlas.svg?d=YFhHtS-j
   link: https://github.com/williamsdrake/oralAtlas
   description: Code used to analyze datasets and generate figures from  Williams et al., 2021
   repo: 
   
 - name: Kim et al. (2024) - Code
   group: dataset
-  image: images/resource/epithelial-IL23.svg
+  image: https://githubcard.com/williamsdrake/epithelial-IL23.svg?d=jWxn7Ohm
   link: https://github.com/williamsdrake/epithelial-IL23
   description: Code used to analyze CZI datasets and generate figures in Kim et al., 2024
   repo:
@@ -61,7 +61,7 @@
 
 - name: Lab website template
   group: more
-  image: images/resource/lab-website-template.svg
+  image: https://githubcard.com/greenelab/lab-website-template.svg?d=_CbCZW1b
   link: https://github.com/greenelab/lab-website-template
   description: An incredible template from Greene Lab used to make this website. Fork it on github for your own use!
   repo: 
