--- a/_data/resources.yaml
+++ b/_data/resources.yaml
@@ -27,7 +27,7 @@
   
 - name: Theofilou et al., (2026) - Code
   group: dataset
-  image: https://githubcard.com/dwilliamsLab/gingiva-2025.svg?d=97AHFB5l
+  image: https://githubcard.com/dwilliamsLab/gingiva-2025.svg?d=ixCYYYdZ
   link: https://github.com/dwilliamsLab/gingiva-2025
   description: Code used to analyze datasets and generate figures in Theofilou et al., 2026
   
