--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,6 @@
+- id: doi:10.1016/j.celrep.2021.109385
+  image: images/cellRep.svg
+
 - id: doi:10.1038/s41467-024-51651-9
   image: images/natComms.svg
   
